fixes squished header bar; renames switch control image in CSS

--- a/public/css/new_common.css
+++ b/public/css/new_common.css
@@ -374,7 +374,7 @@ input[type='button'] {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
-  background-image: url(../images/switchcontrol.svg);
+  background-image: url(../images/switchplate_control.svg);
 } 
 
 /* On/Off Styles for Background Plate */
